# opbdh

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  index.html
src/opbdh/: __init__.py  cli.py  config.py  estimate.py  gpu.py  hal.py  hf.py  primeintellect.py  remote.py  runpod.py  setup_wizard.py  verify.py
tests/: test_cli_errors.py  test_estimate.py  test_opbdh.py  test_primeintellect.py  test_runpod.py  test_setup_wizard.py
