[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "opbdh"
dynamic = ["version"]
description = "Open the Pod Bay Door, Hal: run model-backed scripts on RunPod."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Claudio Brandolino" }
]
keywords = ["runpod", "huggingface", "gpu", "cli", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "clypi>=1.9",
  "huggingface-hub>=1.3,<2",
  "questionary>=2.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/lumpenspace/opbdh"
Issues = "https://github.com/lumpenspace/opbdh/issues"

[project.scripts]
opbdh = "opbdh.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.8", "twine>=5.0"]

[tool.hatch.version]
path = "src/opbdh/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/opbdh"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
